--- a/nodeJS/03 - npm/01 - project/package.json
+++ b/nodeJS/03 - npm/01 - project/package.json
@@ -2,12 +2,15 @@
   "name": "01---project",
   "version": "1.0.0",
   "description": "belajar node js npm",
-  "exports": {
-    ".": "./index.js",
-    "./write": "./write.js"
-  },
   "type": "module",
   "homepage": "https://s,id/arialink",
+  "keywords": [
+    "nodejs",
+    "ariafatah0711",
+    "npm"
+  ],
+  "author": "ariafatah0711",
+  "license": "MIT",
   "scripts": {
     "prestart": "echo 'before application start'",
     "start": "node index.js",
@@ -15,11 +18,11 @@
     "run": "node index.js && echo 'running node index.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "nodejs",
-    "ariafatah0711",
-    "npm"
-  ],
-  "author": "ariafatah0711",
-  "license": "MIT"
+  "exports": {
+    ".": "./index.js",
+    "./write": "./write.js"
+  },
+  "dependencies": {
+    "lodash": "^4.17.19"
+  }
 }
