--- a/nodeJS/05 - logging/01 - project/package.json
+++ b/nodeJS/05 - logging/01 - project/package.json
@@ -10,7 +10,8 @@
   "author": "ariafatah0711",
   "license": "MIT",
   "dependencies": {
-    "winston": "3.11.0"
+    "winston": "3.11.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.23.9",
@@ -40,4 +41,3 @@
     ]
   }
 }
-
